data/derived/fa15/progs/unify/prog3914.ml.out
Characters 64-65:
  | h::t -> w@[];;
            ^
Error: This expression has type string but an expression was expected of type
         'a list
